# pylegifrance

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  pyproject.toml  release-please-config.json  sitemap.xml
.claude/: settings.json
.claude/rules/: architecture.md  coding.md  principles.md  testing.md  tooling.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: story.yml
.github/actions/setup/: action.yml
.github/workflows/: auto-merge.yml  docs.yml  release-please.yml  release.yml  test.yml
docs/: CLAUDE.md  astro.config.mjs  log.md  package.json  pnpm-lock.yaml
docs/raw/: README.md
docs/raw/legifrance/: cgu-legifrance-api.md  cgu-piste-legifrance-beta.md  conditions-generales-d-utilisation-de-l-api.docx  conditions-generales-d-utilisation-de-l-api.md  description-des-tris-et-filtres-de-l-api.md  description-des-tris-et-filtres-de-l-api.xlsx  exemples-d-utilisation-de-l-api.docx  exemples-d-utilisation-de-l-api.txt  lexique-api-lgf.docx  lexique-api-lgf.txt
docs/raw/prompts/: README.md
docs/reference/: index.md
docs/reference/Fonds/: .pages
docs/src/: content.config.ts
docs/src/styles/: custom.css
docs/tutoriels/: index.md
docs/wiki/: index.mdx
docs/wiki/concepts/: cid-and-versioning.md  fond-facade.md  generated-models.md
docs/wiki/entities/: article.md  authentication.md  fond-juri.md  fond-loda.md
docs/wiki/operations/: search-legal-code.md  search-loda.md
docs/wiki/references/: juri.md
explication/: index.html
explication/architecture/: index.html
guides-pratiques/: index.html
guides-pratiques/demarrage/api-configuration/: index.html
guides-pratiques/demarrage/installation/: index.html
guides-pratiques/demarrage/piste-account/: index.html
guides-pratiques/recherche/code/: index.html
guides-pratiques/recherche/jurisprudence/: index.html
guides-pratiques/recherche/loda/: index.html
pylegifrance/: __init__.py  auth.py  client.py  config.py  utils.py
pylegifrance/fonds/: code.py  juri.py  kali.py  loda.py
pylegifrance/models/: base.py  constants.py
pylegifrance/models/code/: enum.py  models.py  search.py
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_client.py
tests/integration/: conftest.py  test_fonds_smoke.py
tests/unit/: test_docs_contract.py
tutoriels/: index.html
(+91 files in other folders)
