[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylegifrance"
version = "1.6.3"
description = "Librairie qui fournit des fonctions simples pour rechercher dans legifrance"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Raphaël d'Assignies", email = "rdassignies@protonmail.ch" },
    { name = "Frederic F.", email = "17061560+freddo1503@users.noreply.github.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

dependencies = [
    "dotenv>=0.9.9",
    "tenacity>=9.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "beautifulsoup4>=4.14.3",
]

[project.urls]
Homepage = "https://github.com/pylegifrance/pylegifrance"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "timeout: mark test to timeout after a specified number of seconds"
]

[tool.setuptools.packages.find]
include = ["pylegifrance", "pylegifrance.*"]

[tool.setuptools.package-data]
pylegifrance = ["py.typed"]

[tool.setuptools]
include-package-data = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=3.4.0",
    "twine>=4.0.2",
    "pytest-bdd>=8.1.0",
]

[tool.datamodel-codegen]
input = "pylegifrance/models/generated/legifrance.json"
input-file-type = "jsonschema"
output = "pylegifrance/models/generated/model.py"
output-model-type = "pydantic_v2.BaseModel"
target-python-version = "3.12"

field-constraints = true
snake-case-field = true
strip-default-none = false
reuse-model = true
use-standard-collections = true
use-double-quotes = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pylegifrance"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["pylegifrance"]
